src/tests/errors/staticanalysis/typing/typeerrors/procedure4_fail.cmp
program procdure4_fail
begin
   proc Add( val1 : int , val2 : int )  : int 
   begin
    return val1 + val2; 
   end;
   proc main()
   begin
      printint( Add( 40 ) ); /* error, procedure takes two arguments */
   end
end